Adjust alignment of text in projects section media query 1455px and less. Fix the link to the calculator project

--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ body.dark-mode .toggle {
   margin: 200px 0;
   padding: 0 80px;
 }
+
 .img {
   width: 630px;
   height: 500px;
@@ -212,6 +213,7 @@ h1 { font-size: var(--font-large); }
   display: flex;
   align-items: center;
   justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 30px;
   margin-bottom: 40px;
@@ -364,6 +366,13 @@ footer span {
   }
 }
 
+@media all and (max-width: 1455px) {
+  .project-description-container a { display: none; }
+  .project-description-container {
+    align-items: center;
+  }
+}
+
 /* --- RESPONSIVE --- */
 @media all and (max-width: 800px) {
   :root {
@@ -374,7 +383,6 @@ footer span {
   
   
   header {
-
     display: grid;
     grid-template-columns: 2, 1fr;
     grid-template-rows: 2, 1fr;
